--- a/Covid19.html
+++ b/Covid19.html
@@ -25,7 +25,7 @@
 
   </head>
 
-  <body  onload="sortLectueresAtoZ()">
+  <body onload="checkDate()">
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -69,70 +69,110 @@
         <div id="dropDown">
         </div>
       </div>
-      <div id="FindMyLectureTable" style="text-align: center">
-        <table class="table table-hover">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col"> 
-                    Lecture
-                    <button hidden class="btn btn-info" id ="SortButtonAtoZ" type="button" onclick="sortLectueresAtoZ()">
-                    <svg id ="SortButtonIcon" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-sort-alpha-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M4 2a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-1 0v-11A.5.5 0 0 1 4 2z"/>
-                    <path fill-rule="evenodd" d="M6.354 11.146a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L4 12.793l1.646-1.647a.5.5 0 0 1 .708 0z"/>
-                    <path id = "SortButtonPath" d="M9.664 7l.418-1.371h1.781L12.281 7h1.121l-1.78-5.332h-1.235L8.597 7h1.067zM11 2.687l.652 2.157h-1.351l.652-2.157H11zM9.027 14h3.934v-.867h-2.645v-.055l2.567-3.719v-.691H9.098v.867h2.507v.055l-2.578 3.719V14z"/>
-                    </svg> 
-                </button>
-                    <button class="btn btn-info" id ="SortButtonZtoA" type="button" onclick="sortLectueresZtoA()">
-                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-sort-alpha-down-alt" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M4 2a.5.5 0 0 1 .5.5v11a.5.5 0 0 1-1 0v-11A.5.5 0 0 1 4 2z"/>
-                            <path fill-rule="evenodd" d="M6.354 11.146a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 0 1 .708-.708L4 12.793l1.646-1.647a.5.5 0 0 1 .708 0z"/>
-                            <path d="M9.027 7h3.934v-.867h-2.645v-.055l2.567-3.719v-.691H9.098v.867h2.507v.055L9.027 6.309V7zm.637 7l.418-1.371h1.781L12.281 14h1.121l-1.78-5.332h-1.235L8.597 14h1.067zM11 9.687l.652 2.157h-1.351l.652-2.156H11z"/>
-                          </svg>
-                </button>
- 
-                </th>
-                <th scope="col">School</th>
-                <th scope="col">Email</th>
-                <th scope="col">Office</th>
-              </tr>
 
-            </thead>
-            <tbody id = "TableBody">
-           </tbody>
-          </table>
+<div class="container">
+            <img src="covid19Image.png" class="img-fluid" alt="COVID-19 Syptoms" Align="center">
+</div>
+
+
+<div class="container">
+<form>
+  <div class="form-group row">
+    <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+    <div class="col-sm-10">
+      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
     </div>
+  </div>
+  <div class="form-group row">
+    <label for="inputDate3" class="col-sm-2 col-form-label">Date</label>
+    <div class="col-sm-10">
+      <input type="date" class="dateselect" id="datepicker" placeholder="date" min="2020-12-22" max="2020-12-23" required="required" onchange="checkDate(event)">
+    </div>
+  </div>
+  <div class="form-group row">
+    <label for="inputDate3" class="col-sm-2 col-form-label">Time</label>
+    <div class="col-sm-10">
+      <label class="mr-sm-2" for="inlineFormCustomSelect">Preference</label>
+      <select class="custom-select mr-sm-2" id="timeselector" disabled>
+        <option id="placeholdertextforTime" selected>Please Select A Date First</option>
+        <option value="1">09:50</option>
+        <option value="2">12:40</option>
+        <option value="3">15:30</option>
+      </select>
+  
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <div class="col-sm-2">Checkbox</div>
+    <div class="col-sm-10">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="gridCheck1">
+        <label class="form-check-label" for="gridCheck1">
+          I confirm i dont have any symptons of covid 19 and if i did i would get a nhs test.
+        </label>
+      </div>
+    </div>
+  </div>
+  <div class="form-group row">
+    <div class="col-sm-10">
+      <button type="submit" onclick="BookTest()" class="btn btn-primary">Sign in</button>
+    </div>
+  </div>
+</form>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <button hidden type="button" id="test" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
         Launch demo modal
       </button>
       
+
+
+
       <!-- Modal -->
       <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLongTitle">DanSmith</h5>
+              <h5 class="modal-title" id="exampleModalLongTitle">Test booked Sucesfuly</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
-            <img src="DanSmith.jpg" alt="Dan DanSmith" Align="Left">
             <p style="text-align: left;">
-            Dan Smith <br>
-            CMP <br>
-            someemail@yuea.ac.uk <br>
-            office: 2.39 <br>
-            +44 (0)1603 59 2608 <br>
+            22/12/2020 <br>
+            2:40 <br>
+            Locatoin  <br>
+            arive no more than 5 minuits before <br>
+            
             </p>
             </div>
             <div class="modal-footer">
+              <button type="button" class="btn btn-primary" data-dismiss="modal">Add to Calander</button>
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
       </div>
+
+
 
 
 
