--- a/Covid19.html
+++ b/Covid19.html
@@ -30,7 +30,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <a class="nav-link" href="#"><img class="logo" src="ueaLogo.png" alt="UEA Logo" height="30"></a>
+      <a class="nav-link" href="Home2.html"><img class="logo" src="ueaLogo.png" alt="UEA Logo" height="30"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -38,10 +38,10 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">COVID-19</a>
+            <a class="nav-link" href="Covid19.html">COVID-19</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Find Lecturer</a>
+            <a class="nav-link" href="FindMyLecture.html">Find Lecturer</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
