--- a/Covid19.html
+++ b/Covid19.html
@@ -127,18 +127,36 @@
 
 
 <div class="container">
-  <input type="text"> <br>
-  <label>Email</label>
-   <input type="email"> <br>
-   <label> Select Form availble Dates </label>
-   <input type="date" id="datefiled" min="2020-12-22" max="2020-12-23" onchange="showAvailableDates()"> <br>
-   <select class="custom-select mr-sm-2" id="times" disabled>
-     <option id="placeholdertextforTime" selected>No Slots availble On Selected Date. Please Select a Free date first</option>
-     <option value="1">09:50</option>
-     <option value="2">12:40</option>
-     <option value="3">15:30</option>
-   </select>
-<button class="btn btn-primary" data-toggle="modal" data-target="#bookTest" onclick="simulateLoading()">Book Test Now</button>  
+  <form>
+    <p class="h3">Book a Test</p>
+    <div class="form-group row">
+      <label for="text" class="col-sm-2 col-form-label">Name</label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control" id="inputText" placeholder="Name">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label form="inputDate3" class="col-sm-2 col-form-label">Date</label>
+      <div class="col-sm-10">
+        <input type="date" class="dateselect" id="datefiled" placeholder="date" min="2020-12-22" max="2020-12-23" required="required" onchange="showAvailableDates()">
+      </div>
+    </div>
+    
+    <select class="custom-select mr-sm-2" id="times" disabled>
+      <option id="placeholdertextforTime" selected>No Slots availble On Selected Date. Please Select a Free date first</option>
+      <option value="1">09:50</option>
+      <option value="2">12:40</option>
+      <option value="3">15:30</option>
+    </select>
+  </form>
+  <button class="btn btn-primary" data-toggle="modal" data-target="#bookTest" onclick="simulateLoading()" disabled>Book Test Now</button>  
+  
 </div>
 
 
