--- a/Covid19.html
+++ b/Covid19.html
@@ -114,6 +114,10 @@
             <!-- https://credder.com/article/22354/loss-of-smell-and-taste-validated-as-covid-19-symptoms -->
 </div>
 
+<p>
+  This is really impronte informing to do with covid-19 in fact it's so imporatn you really must read all of the long and 100% meanifuly paragraphe which is defitnly not being used as a placeholder to make sure the page looks like it has all the infoormation one would need if they where to develop Syptoms of a illnese that may have something to do with a mexican beer. 
+</p>
+
 <!--
 <div class="container">
   <p class="h3">Book a Test</p>
@@ -179,7 +183,7 @@
     <div class="form-group row">
       <label for="text" class="col-sm-2 col-form-label">Name</label>
       <div class="col-sm-10">
-        <input type="email" class="form-control" id="inputText" placeholder="Name">
+        <input type="text" class="form-control" id="inputText" placeholder="Name">
       </div>
     </div>
     <div class="form-group row">
@@ -202,7 +206,7 @@
       <option value="3">15:30</option>
     </select>
   </form>
-  <button class="btn btn-primary" data-toggle="modal" data-target="#bookTest" onclick="simulateLoading()" disabled>Book Test Now</button>  
+  <button class="btn btn-primary" data-toggle="modal" data-target="#bookTest" onclick="simulateLoading()">Book Test Now</button>  
   
 </div>
 
@@ -246,16 +250,16 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLongTitle">Test booked Sucesfuly</h5>
+              <h5 class="modal-title" id="exampleModalLongTitle" style="font-size: xx-large;">Test booked Sucesfuly</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
-            <p style="text-align: left;">
-            22/12/2020 <br>
-            2:40 <br>
-            Location  <br>
+            <p style="text-align: left; font-size: x-large;">
+            Date: 22/12/2020
+            Time: 2:40<br>
+            Location: UEA  <br>
             Please arive no more than 5 minuits before <br>
             
             </p>
@@ -267,20 +271,47 @@
           </div>
         </div>
       </div>
-
-
-
-
-
-
-
-
-
-
    
 </main><!-- /.container -->
 
-    <!-- Bootstrap core JavaScript
+
+
+<footer class="site-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>About</h6>
+        <p class="text-justify">This Webist <i>CODE WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers build up concepts in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.</p>
+      </div>
+
+      <div class="col-xs-12 col-md-3" style="text-align: right;">
+        <h6>Get In Touch</h6>
+        <ul class="footer-links">
+          <li><a href="">IT Suport</a></li>
+          <li><a href="http://scanfcode.com/category/front-end-development/">ourSiteIncorpated</a></li>
+          <li><a href="http://scanfcode.com/category/back-end-development/">more Links</a></li>
+          <li><a href="http://scanfcode.com/category/java-programming-language/">even more Links</a></li>
+          <li><a href="http://scanfcode.com/category/android/">Request Free Money</a></li>
+          <li><a href="http://scanfcode.com/category/templates/">Give Feedback</a></li>
+        </ul>
+      </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-6 col-xs-12">
+        </p>
+      </div>
+   </div>
+  </div>
+</footer>
+
+
+
+
+
+  <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
