--- a/Covid19.html
+++ b/Covid19.html
@@ -31,7 +31,7 @@
   <body onload="showAvailableDates()"> 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <a class="nav-link" href="#"><img class="logo" src="ueaLogo.png" alt="UEA Logo" height="30"></a>
+      <a class="nav-link" href="Home2.html"><img class="logo" src="ueaLogo.png" alt="UEA Logo" height="30"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -114,7 +114,7 @@
 
      
 <div class="container">
-  <p class="h3">COVID-19 Symptom Checklist</p>
+  <h3>COVID-19 Symptom Checklist</h3>
             <img src="covid19ImageNoBackground.png" class="img-fluid" alt="COVID-19 Syptoms" Align="center">
             <!-- https://credder.com/article/22354/loss-of-smell-and-taste-validated-as-covid-19-symptoms -->
 </div>
@@ -184,21 +184,21 @@
 
 <div class="container">
   <form>
-    <p class="h3">Book a Test</p>
+    <h3> Book a Test</h3>
     <div class="form-group row">
-      <label for="text" class="col-sm-2 col-form-label">Name</label>
+      <label class="forceWhite" for="text" class="col-sm-2 col-form-label">Name</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="inputText" placeholder="Name">
       </div>
     </div>
     <div class="form-group row">
-      <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+      <label class="forceWhite" for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
       <div class="col-sm-10">
         <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
       </div>
     </div>
     <div class="form-group row">
-      <label form="inputDate3" class="col-sm-2 col-form-label">Date</label>
+      <label class="forceWhite" form="inputDate3" class="col-sm-2 col-form-label">Date</label>
       <div class="col-sm-10">
         <input type="date" class="dateselect" id="datefiled" placeholder="date" min="2020-12-22" max="2020-12-23" required="required" onchange="showAvailableDates()">
       </div>
