--- a/Covid19.html
+++ b/Covid19.html
@@ -286,18 +286,17 @@
     <div class="row">
       <div class="col-sm-12 col-md-6">
         <h6>About</h6>
-        <p class="text-justify">This Website <i>CODE WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers build up concepts in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.</p>
+        <p class="text-justify">© UEA. All rights reserved. University of East Anglia, Norwich Research Park, Norwich, Norfolk, NR4 7TJ, UK | +44 (0) 1603 456161</p>
       </div>
 
       <div class="col-xs-12 col-md-3" style="text-align: right;">
         <h6>Get In Touch</h6>
         <ul class="footer-links">
-          <li><a href="">IT Suport</a></li>
-          <li><a href="http://scanfcode.com/category/front-end-development/">ourSiteIncorpated</a></li>
-          <li><a href="http://scanfcode.com/category/back-end-development/">more Links</a></li>
-          <li><a href="http://scanfcode.com/category/java-programming-language/">even more Links</a></li>
-          <li><a href="http://scanfcode.com/category/android/">Request Free Money</a></li>
-          <li><a href="http://scanfcode.com/category/templates/">Give Feedback</a></li>
+          <li><a href="">Accessibility</a></li>
+          <li><a href="http://scanfcode.com/category/front-end-development/">Legal Statements</a></li>
+          <li><a href="http://scanfcode.com/category/back-end-development/">Statement on Modern Slavery</a></li>
+          <li><a href="http://scanfcode.com/category/java-programming-language/">Cookie Policy</a></li>
+          <li><a href="http://scanfcode.com/category/android/">Data Protection</a></li>
         </ul>
       </div>
       </div>
