--- a/Covid19.html
+++ b/Covid19.html
@@ -211,7 +211,7 @@
       <option value="3">15:30</option>
     </select>
   </form>
-  <button class="btn btn-primary" data-toggle="modal" data-target="#bookTest" id="submitButton" onclick="simulateLoading()">Book Test Now</button>  
+  <button id="booknowButton" class="btn btn-primary" data-toggle="modal" data-target="#bookTest" id="submitButton" disabled onclick="simulateLoading()">Book Test Now</button>  
   
 </div>
 
@@ -255,13 +255,13 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLongTitle" style="font-size: xx-large;">Test booked Sucesfuly</h5>
+              <h5 class="modal-title" id="exampleModalLongTitle" style="font-size: xx-large; color: black;">Test booked Sucesfuly</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
-            <p style="text-align: left; font-size: x-large;">
+            <p style="text-align: left; font-size: x-large; color:black;">
             Date: 22/12/2020
             Time: 2:40<br>
             Location: UEA  <br>
