changed covid information

--- a/Covid19.html
+++ b/Covid19.html
@@ -118,9 +118,15 @@
             <img src="covid19ImageNoBackground.png" class="img-fluid" alt="COVID-19 Syptoms" Align="center">
             <!-- https://credder.com/article/22354/loss-of-smell-and-taste-validated-as-covid-19-symptoms -->
 </div>
-
+<br>
 <p>
-  This is really impronte informing to do with covid-19 in fact it's so imporatn you really must read all of the long and 100% meanifuly paragraphe which is defitnly not being used as a placeholder to make sure the page looks like it has all the infoormation one would need if they where to develop Syptoms of a illnese that may have something to do with a mexican beer. 
+  If you have any of the main symptoms of coronavirus:
+<br>
+<br>
+1. Get a test to check if you have coronavirus as soon as possible.
+<br><br>
+2. You and anyone you live with should stay at home and not have visitors until you get your test result – only leave your home to have a test.
+Anyone in your support bubble should also stay at home if you have been in close contact with them since your symptoms started or during the 48 hours before they started.
 </p>
 
 <!--
